# varun_mac_agent

./: .gitignore  README.md  agent_contract.md  agent_memory.py  agent_orchestrator.py  agent_runtime.py  agent_schemas.py  agent_wiki_summarizer.py  download_clicky_build.sh  memory_architecture.md  micky_context.md  micky_hld.excalidraw  micky_hld.mmd  proxy.py  pyproject.toml  run_micky.sh  run_proxy.sh  test_gemini_apis.py
.github/workflows/: build.yml
clicky/: AGENTS.md
clicky/leanring-buddy/: AccessibilityClicker.swift  AgenticActionExecutor.swift  AgenticCoordinateMapper.swift  AgenticTagParser.swift  BuddyDictationManager.swift  BuddyTranscriptionProvider.swift  ClickyAnalytics.swift  CompanionManager.swift  CompanionPanelView.swift  CompanionScreenCaptureUtility.swift  GeminiAPI.swift  GeminiSTTProvider.swift  GeminiTTSClient.swift  GlobalPushToTalkShortcutMonitor.swift  Info.plist  MenuBarPanelManager.swift  MickyMemoryStore.swift  OCRClicker.swift  OverlayWindow.swift  leanring_buddyApp.swift
clicky/leanring-buddy.xcodeproj/: project.pbxproj
clicky/worker/src/: index.ts
